--- a/modules/Brewfile
+++ b/modules/Brewfile
@@ -1,5 +1,6 @@
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
+tap "bep/tap"
 
 cask "fastlane"
 cask "ngrok"
@@ -29,6 +30,7 @@ cask "tuntap"
 cask "firefox"
 cask "google-chrome"
 cask "brave"
+cask "teamviewer"
 
 brew "ansible"
 brew "caddy"
@@ -37,3 +39,4 @@ brew "nmap"
 brew "pass"
 brew "watchman"
 brew "xctool"
+brew "bep/tap/s3deploy"
